[package]
name = "uncappy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defer = "0.2.1"
windows-core = "0.61.0"

[dependencies.winapi]
version = "0.3.9"
features = ["winuser"]

[dependencies.windows]
version = "0.61.1"
features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
]
