[package]
name = "uncappy"
version = "0.1.0"
edition = "2021"
authors = ["John Maguire <john.maguire@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defer = "0.2.1"
env_logger = "0.11.8"
log = "0.4.27"
windows-core = "0.61.0"

[build-dependencies]
embed-resource = "3.0.2"

[dependencies.windows]
version = "0.61.1"
features = [
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]
